--- a/Index.html
+++ b/Index.html
@@ -2,17 +2,14 @@
 <html>
 <head>
     <title> Life in Wild </title>
-	
-<!--stylesheet start here....!-->
 	<link rel="stylesheet" type="text/css" href="style.css"> 
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-	<link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
+	
 <body>
 <header>
 	<h1>Life in Wild </h1>
-<!--	Nav Start from here...!-->
 	<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" class="navbar-brands" style="font-size: 1.7em;font-family: 'Shadows Into Light', cursive;, cursive;" href="#" >Home</a>
+  <a class="navbar-brand" style="font-size: 2em;font-family: andrea bilarosa;" href="#" >Home</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -20,24 +17,24 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item">
-        <a class="nav-link" style="font-size: 1.5em;font-family: 'Permanent Marker', cursive;" href="Wild%2520life/About%20US.html">About Us<span class="sr-only">(current)</span></a>
+        <a class="nav-link" style="font-size: 1.5em;font-family: Wash Your Hand;" href="About%20US.html">About Us<span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" style="font-size: 1.5em;font-family: 'Permanent Marker', cursive;" href="Wild%2520life/Subscribtion.html">Subscribtion</a>
+        <a class="nav-link" style="font-size: 1.5em;font-family: Wash Your Hand;" href="Subscribtion.html">Subscribtion</a>
       </li>
       <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle"  href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="font-size: 1.5em;font-family: 'Permanent Marker', cursive;">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="font-size: 1.5em; font-family: wash your hand;">
           Gallery     
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" style="font-size: 1em;font-family: 'Permanent Marker', cursive;;" href="#">Wildanimals</a>
-          <a class="dropdown-item" style="font-size: 1em;font-family: 'Permanent Marker', cursive;" href="#">Instests</a>
+          <a class="dropdown-item" style="font-size: 1.5em; font-family: Perfume Classic Demo Version;" href="#">Wildanimals</a>
+          <a class="dropdown-item" style="font-size: 1.5em; font-family: Perfume Classic Demo Version;" href="#">Instests</a>
           <div class="dropdown-divider"></div>
-          <a class="dropdown-item" style="font-size: 1em;ffont-family: 'Permanent Marker', cursive;" href="#">Tips and Tricks</a>
+          <a class="dropdown-item"  href="#">Tips and Tricks</a>
         </div>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#" style="font-size: 1.5em;" > Contact Me</a>
+        <a class="nav-link" href="#" tabindex="-1" aria-disabled="true" style="font-size: 1.5em; font-family: Perfume Classic Demo Version;"> Contact Me</a>
       </li>
     </ul>
     <form class="form-inline my-2 my-lg-0">
@@ -46,9 +43,7 @@
     </form>
   </div>
 </nav>
-</header>
-	
-<!--	Corusel Start From Here......!-->
+	</header>
 <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
   <ol class="carousel-indicators">
     <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
@@ -87,8 +82,6 @@
     <span class="sr-only">Next</span>
   </a>
 </div>
-	
-<!--	Images Start From Here...!-->
 <div id="container">
 		    <img class="containerx" src="https://static.pexels.com/photos/52500/horse-herd-fog-nature-52500.jpeg">
 			<img class="containerx" src="https://static.pexels.com/photos/66898/elephant-cub-tsavo-kenya-66898.jpeg">
@@ -101,10 +94,9 @@
 			<img class="containerx" src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcTFfDySRZPbnS-UwxnmJ6CDenb6o3gVCIXu1iPr0dipkLijS7GL&usqp=CAU">
 			<img class="containerx" src="https://cdn.cnn.com/cnnnext/dam/assets/191015085746-14-national-wildlife-photographer-of-the-year-2019-full-169.jpg">
 	</div>
-<!--	Footer start from Here-->
 	
 	
-<!--	Java Script is here?-->
+	
 	<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
